[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/roboto_mono_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/hud/score_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/hud/killed_icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/hud/cooldown_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/hud/invincible_off_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/pause_btn.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/pause_btn_hover.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.568627 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="ScorePanel" type="Panel" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 286.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedPanel" type="Panel" parent="."]
margin_left = 1078.0
margin_top = 12.0
margin_right = 1264.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_icon" type="TextureRect" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_lbl" type="Label" parent="."]
margin_left = 52.0
margin_top = 14.0
margin_right = 97.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "####"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Killed_icon" type="TextureRect" parent="."]
margin_left = 183.0
margin_top = 15.0
margin_right = 200.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Killed_lbl" type="Label" parent="."]
margin_left = 220.0
margin_top = 14.0
margin_right = 280.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "####"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cooldown_icon" type="TextureRect" parent="."]
margin_left = 1085.0
margin_top = 15.0
margin_right = 1102.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cooldown_lbl" type="Label" parent="."]
margin_left = 1123.0
margin_top = 14.0
margin_right = 1168.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "###"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invincible_icon" type="TextureRect" parent="."]
margin_left = 1225.0
margin_top = 15.0
margin_right = 1242.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 1028.0
margin_top = 11.0
margin_right = 1113.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseButton" to="." method="_on_pausePressed"]
